<resources>
    <string name="app_name">TimeLapse</string>
    <string name="timelapse_duration">How long to take photos for (in seconds)</string>
    <string name="example_duration">60</string>
    <string name="photos_dt">How often should photos be taken (in seconds)</string>
    <string name="example_dt">5</string>
    <string name="check_input_button_txt">Check inputs</string>
    <string name="confirm_input_button_txt">Proceed</string>
    <string name="start_timelapse_button_txt">Start</string>
    <string name="confirm_input_txt">"This will take %d photos, which corresponds to a %.1f s long video at 30 fps."</string>
</resources>
